# COVID-Genome-Classification-NCBI

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
.cursor/rules/: download_restrictions.mdc  project_guidelines.mdc
.github/workflows/: ci.yml
data/: strain_manifest.json
src/: CLAUDE.md  advanced_visualizations.py  degradation.py  download.py  training.py  visualization.py
tools/: CLAUDE.md  accession_list.txt  accessions.json  download_data.py  download_engine.py  download_genomes.py  fetch_accessions.py  probe_queries.py  robustness_experiment.py  spike_representation_robustness.py
